--- a/src/components/Searchbar/Searchbar.css
+++ b/src/components/Searchbar/Searchbar.css
@@ -52,9 +52,6 @@ input:focus {
     
 }
 
-.dataItem p {
-    color: red;
-}
 
 #clearBtn {
     cursor :pointer;
@@ -71,4 +68,10 @@ input:focus {
 
 .dropdownClicked {
     display: none;
+}
+
+.cityInput {
+    color: crimson;
+    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+
 }
